Corrected tab alignment

--- a/public/css/report.css
+++ b/public/css/report.css
@@ -294,7 +294,7 @@
   margin: 0 0 -1px;
   padding: 5px 15px;
   width: 100%;
-  min-width: 100px;
+  min-width: 80px;
   height: 50px;
   text-align: center;
   color: #333;
